# UAV-Network-Simulation

./: .gitignore  README.MD  README.md
src/: CMakeLists.txt  main.cpp
src/Drones/: Base_Drone.cpp  Base_Drone.h  Basic_UAV.cpp  Basic_UAV.h  CMakeLists.txt  Command_UAV.cpp  Command_UAV.h  Networking_Basic_Drone.cpp  Networking_Basic_Drone.h  Networking_Commander.cpp  Networking_Commander.h
src/Google_test/: CMakeLists.txt  Test_Class_Link.cpp  Test_Class_Network.cpp  Test_Class_Networking_Commander.cpp  Test_Class_Node.cpp
src/Missions/: CMakeLists.txt  Mission.cpp  Mission.h
src/Network_Models/: CMakeLists.txt  Link.cpp  Link.h  Model.cpp  Model.h  Network.cpp  Network.h  Node.cpp  Node.h
src/Networking/: CMakeLists.txt
src/Networking/Handlers/: CMakeLists.txt  connection_handler.cpp  connection_handler.h
src/Networking/Server/: CMakeLists.txt  Server.cpp  Server.h
